# 2d-particle-sim

./: .gitignore  CMakeLists.txt  README.md  notes.txt
include/: simulation.hpp  simulation_constants.hpp  simulation_settings.hpp
src/: main.cpp
